[gd_scene load_steps=5 format=3 uid="uid://c3gpefthkj1ad"]

[ext_resource type="PackedScene" uid="uid://dob1j7ncrsew8" path="res://scenes/laser/laser.tscn" id="1_2graw"]
[ext_resource type="Script" path="res://scenes/pipes/pipes.gd" id="1_r6ogh"]
[ext_resource type="PackedScene" uid="uid://chpda3iji68gr" path="res://scenes/pipe/pipe.tscn" id="2_x3ytr"]
[ext_resource type="AudioStream" uid="uid://bo5wwxepov82o" path="res://assets/audio/score.wav" id="4_ml0q6"]

[node name="Pipes" type="Node2D"]
script = ExtResource("1_r6ogh")

[node name="Laser" parent="." instance=ExtResource("1_2graw")]

[node name="PipeTop" parent="." instance=ExtResource("2_x3ytr")]
position = Vector2(2.08165e-12, -80)
rotation = 3.14159

[node name="PipeBottom" parent="." instance=ExtResource("2_x3ytr")]
position = Vector2(2.08165e-12, 80)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(78, 0)

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ml0q6")

[connection signal="body_exited" from="Laser" to="." method="_on_laser_body_exited"]
[connection signal="body_entered" from="PipeTop" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="PipeBottom" to="." method="_on_pipe_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
